tests/baselines/reference/parserComputedPropertyName10.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName10.ts(2,4): error TS1166: A computed property name in a class property declaration must directly refer to a built-in symbol.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName10.ts(2,5): error TS2304: Cannot find name 'e'.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName10.ts (2 errors) ====
    class C {
       [e] = 1
       ~~~
!!! error TS1166: A computed property name in a class property declaration must directly refer to a built-in symbol.
        ~
!!! error TS2304: Cannot find name 'e'.
    }